crates/cli/tests/snapshots/bool_comparison__lint_a83e7884e4c039d6517795734c6cab32d5e69473f7a6b6fe660eec020d70993d.snap
---
source: crates/cli/tests/bool_comparison.rs
expression: "\"true == o ? p\""
---
[01] Warning: Unnecessary comparison with boolean
   ╭─[<temp_file_path>:1:1]
   │
 1 │ true == o ? p
   │ ──────┬──────  
   │       ╰──────── Comparing o ? p with boolean literal true
───╯
